syntax = "proto3";

package aperture.flowcontrol.controlpoints.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// grpc service
service FlowControlPointsService {
  rpc GetControlPoints(google.protobuf.Empty) returns (FlowControlPoints) {
    option (google.api.http) = {get: "/v1/flowcontrol/controlpoints"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: ["aperture-agent"];
    };
  }
}

message FlowControlPoints {
  repeated FlowControlPoint flow_control_points = 1;
}

message FlowControlPoint {
  string service = 1;
  string control_point = 2;
}
